--- a/freedomboxalarm-1.0/freedomboxalarm.1
+++ b/freedomboxalarm-1.0/freedomboxalarm.1
@@ -1,12 +1,12 @@
-.\" This man page is inspired in hello.1 from GNU hello-2.10.
-.TH HITHERE "1" "December 2018" "hithere 1.0" "User Commands"
+.\" This man page is inspired in hithrere.1 from GNU hithere 1.0.
+.TH HITHERE "1" "January 2021" "freedomboxalarm 1.0" "User Commands"
 .SH NAME
-hithere - greet user
+freedomboxalarm - greet user
 .SH SYNOPSIS
-.B hithere
+.B freedomboxalarm
 .SH DESCRIPTION
 greets the user, or the world.
 .SH AUTHORS
-Original work by Lars Wirzenius, 2010.
+Original work by duchonic, 202x.
 .br
-Reverse engineered (with permission) by Alex Muntada, 2018.
+engineered to test debian pakage and fredombox stuff
