--- a/freedomboxalarm-1.0/debian/changelog
+++ b/freedomboxalarm-1.0/debian/changelog
@@ -2,4 +2,4 @@ freedomboxalarm (1.0-1) UNRELEASED; urgency=low
 
   * Initial release. (Closes: #XXXXXX)
 
- -- Lars Wirzenius <liw@liw.fi>  Thu, 18 Nov 2010 17:25:32 +0000
+ -- duchonic <duchonic@bluewin.ch>  Sun, 06 Jun 2021 08:25:32 +0000
