freedombox with shebang

--- a/freedomboxcountdown-1.0/debian/changelog
+++ b/freedomboxcountdown-1.0/debian/changelog
@@ -1,4 +1,4 @@
-freedomboxalarm (1.0-1) UNRELEASED; urgency=low
+freedomboxcountdown (1.0-1) UNRELEASED; urgency=low
 
   * Initial release. (Closes: #XXXXXX)
 
